[package]
name = "ssh-t"
version = "0.1.0"
edition = "2021"
description = "A TUI-based SSH terminal manager with SFTP support"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# SSH
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2"

# Credential storage
keyring = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Terminal emulation
vte = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
unicode-width = "0.2"
